syntax = "proto3";

import "google/protobuf/struct.proto";

option go_package = "/proto";

service UserStoreHubService {

    rpc communicate (stream RemoteMessage) returns (stream RemoteMessage);
}

service RemoteUserStoreService {

    rpc invokeUserStore (UserStoreRequest) returns (UserStoreResponse);
}

message RemoteMessage {

    string id = 1;
    string operationType = 2;
    string organization = 3;
    google.protobuf.Struct data = 4;
}

message UserStoreRequest {

    string id = 1;
    string operationType = 2;
    string organization = 3;
    google.protobuf.Struct data = 4;
}

message UserStoreResponse {

    string id = 1;
    string operationType = 2;
    string organization = 3;
    google.protobuf.Struct data = 4;
}
